# micro_ndarray

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
benchmarking/: Cargo.toml
examples/: indexing.rs  iterators.rs  speed.rs
src/: array.rs  iterator.rs  lib.rs  vec_split_impl.rs
