[package]
name = "micro_ndarray"
version = "0.2.7"
edition = "2021"
repository = "https://github.com/tudbut/micro_ndarray"
license = "MIT"
description = "Very small multi-dimensional-array implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
ndarray = "0.15.6"
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
