[package]
name = "micro_ndarray"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/tudbut/micro_ndarray"
license = "MIT"
description = "Very small multi-dimensional-array implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_split = { version = "0.1", optional = true }

[dev-dependencies]
ndarray = "0.15.6"
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = [ "vec_split" ]
vec_split = [ "dep:vec_split" ]
