[package]
name = "micro_ndarray"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/tudbut/micro_ndarray"
license = "MIT"
description = "Very small multi-dimensional-array implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_split = { version = "0.1", optional = true }
ident_concat = "0.2"

[features]
default = [ "vec_split" ]
vec_split = [ "dep:vec_split" ]
allocator = [ ]
